@@ -173,7 +173,7 @@ end
 module  IO = Extlib.IO
 
 (** @topic Network*)
-module Netchannels = Libs.ExtNetchannels.Netchannels
+module Net_channels = Libs.ExtNetchannels.Netchannels
 
 
 
@@ -205,13 +205,13 @@ module Data = Extlib.Interfaces
 *)
 
 module  Array    = Extlib.ExtArray.Array
-module  Bigarray = Extlib.ExtBigarray.Bigarray
+module  Big_array= Extlib.ExtBigarray.Bigarray
 module  Dllist   = Extlib.Dllist
-module  DynArray = Extlib.DynArray
+module  Dyn_Array= Extlib.DynArray
 module  Enum     = Extlib.Enum
 module  Global   = Extlib.Global
 module  Hashtbl  = Extlib.ExtHashtbl.Hashtbl
-module  RefList  = Extlib.RefList 
+module  Ref_list = Extlib.RefList 
 module  Queue    = Extlib.ExtQueue.Queue
 module  Ref      = Extlib.Ref
 module  Stack    = Extlib.ExtStack.Stack
@@ -225,10 +225,10 @@ module  Vect     = Extlib.Vect
 *)      
 
 module  Lazy     = Batlib_Baselib_Lazy
-module  LazyList = Extlib.LazyList
+module  Lazy_list= Extlib.LazyList
 module  List     = Extlib.ExtList.List
 module  Map      = Extlib.ExtMap.Map
-module  MultiPMap= Extlib.MultiPMap
+module  Multi_pmap= Extlib.MultiPMap
 module  Option   = Extlib.Option
 module  PMap     = Extlib.PMap
 module  PSet     = Extlib.PSet
@@ -248,7 +248,7 @@ module  Unit     = Extlib.ExtUnit.Unit
 *)
 
 module  Bool     = Extlib.ExtBool.Bool
-module  BitSet   = Extlib.BitSet
+module  Bit_set  = Extlib.BitSet
 
 (**{4 Numeric data}
 
@@ -283,7 +283,7 @@ module  Str     = Extlib.ExtStr.Str
 (*module  StringText (A module containing aliases to String and modified   Char)*)
 (*module  RopeText (As StringText but with implementations from Rope and  UChar)*)
 (*module  UTF8Text (As StringText but with implementations from UTF8 and UChar)*)
-module CharEncodings = Extlib.CharEncodings
+module Char_encodings = Extlib.CharEncodings
 
 (**{3 Tools included in the distribution}
 
@@ -362,7 +362,7 @@ module  SExpr  = Libs.ExtSexp_Conv.Sexp_conv
 
 module Arg      = Extlib.ExtArg.Arg
 module File     = Extlib.File
-module OptParse = Extlib.OptParse
+module Opt_parse= Extlib.OptParse
 module Path     = Batlib_Baselib_Filename
 module Shell    = Extlib.ExtSys.Sys
 module Unix     = Extlib.ExtUnix.Unix
@@ -390,9 +390,9 @@ module  Future =
 struct
 (*  module Lexers = Extlib.ExtGenlex.Languages*)
   module Genlex      = Extlib.ExtGenlex.Genlex
-  module CharParser  = Extlib.CharParser
-  module UCharParser = Extlib.UCharParser
-  module ParserCo    = Extlib.ParserCo
+  module Char_parser  = Extlib.CharParser
+  module UChar_parser = Extlib.UCharParser
+  module Parser_co    = Extlib.ParserCo
   module Path        = Extlib.Path
   module Result      = Extlib.Result
   module Logger      = Extlib.Logger
